Link to Glider DAC 2.0 catalog map on gliders page
Implements #291

--- a/ioos_catalog/templates/gliders.html
+++ b/ioos_catalog/templates/gliders.html
@@ -71,11 +71,11 @@
     </div> <!-- col -->
     <div class="col-sm-6 col-md-4">
       <div class="thumbnail">
-        <a href="{{url_for('catalog_map', filter_provider='Glider_DAC')}}">
+        <a href="{{url_for('catalog_map', filter_provider='Glider_DAC_2')}}">
           <img src="{{url_for('static', filename='img/catalog_map_thumb.png')}}" alt="Glider Catalog Map"></img>
         </a>
         <div class="caption">
-          <a href="{{url_for('catalog_map', filter_provider='Glider_DAC')}}"><h3>Catalog Glider Map</h3></a>
+          <a href="{{url_for('catalog_map', filter_provider='Glider_DAC_2')}}"><h3>Catalog Glider Map</h3></a>
           <p>The IOOS Catalog Map displays IOOS registered datasets and services. Several glider datasets are registered with the IOOS catalog.</p>
         </div> <!-- caption -->
       </div> <!-- thumbnail -->
