Catalog inventory intro text

--- a/ioos_catalog/templates/inventory.html
+++ b/ioos_catalog/templates/inventory.html
@@ -5,11 +5,23 @@
 <div class="container">
   <div class="well">
     <div class="row">
+      <div class="col-sm-12 col-md-12 welcome">
+        <h4>Catalog Inventory</h4>
+        <p>
+          The IOOS Catalog Inventory is intended to provide a detailed view of
+          services and datasets. Information provided includes current status
+          based on the last harvest attempt, metadata, and information for
+          accessing each service or dataset. This view of the IOOS data inventory
+          is intended for data managers in hopes that it will facilitate
+          monitoring of IOOS data and services
+        </p>
+      </div>
+    </div> <!-- row -->
+    <div class="row">
       <div class="col-lg-6" id="map">
       </div>
 
       <div class="col-lg-6">
-        <h3 style="margin-top: 0px">Catalog Inventory</h3>
 
         <p>1. Pick provider(s) using the dropdown or the map:</p>
 
