Links to asset inventory

--- a/ioos_catalog/templates/show_dataset.html
+++ b/ioos_catalog/templates/show_dataset.html
@@ -118,7 +118,7 @@
         $(function () {
           $("[data-toggle='tooltip']").tooltip();
           $("#compliance-score").click(function() {
-            window.location = "http://ioos.noaa.gov/";
+            window.location = "{{url_for('metadatas')}}";
           });
           var width = 500,
               height = 300;
