Fixes CariCOOS links

--- a/ioos_catalog/templates/featured_maps.html
+++ b/ioos_catalog/templates/featured_maps.html
@@ -36,11 +36,11 @@
           </div>
         </div> <!-- list-group-item -->
         <div class="list-group-item media">
-          <a target="_blank" class="pull-left" href="http://sccoos.org/interactive-map/">
+          <a target="_blank" class="pull-left" href="http://www.caricoos.org/drupal/">
             <img class="media-object" src="{{url_for('static', filename='img/featured_maps/caricoos.png')}}" alt="CariCOOS">
           </a>
           <div class="media-body">
-            <a target="_blank" href="http://sccoos.org/interactive-map/">
+            <a target="_blank" href="http://www.caricoos.org/drupal/">
               <h4 class="media-heading">CariCOOS Latest Conditions and Forecasts Map</h4>
             </a>
             The CariCOOS Latest Conditions and Forecasts Map graphically
