Add period to end of info text
Fixes #261

--- a/ioos_catalog/templates/inventory.html
+++ b/ioos_catalog/templates/inventory.html
@@ -13,7 +13,7 @@
           based on the last harvest attempt, metadata, and information for
           accessing each service or dataset. This view of the IOOS data inventory
           is intended for data managers in hopes that it will facilitate
-          monitoring of IOOS data and services
+          monitoring of IOOS data and services.
         </p>
       </div>
     </div> <!-- row -->
