Added inline links to regional/federal on BTN
Fixes #285

--- a/ioos_catalog/templates/by_the_numbers.html
+++ b/ioos_catalog/templates/by_the_numbers.html
@@ -347,11 +347,8 @@
         <div id='regional' class='list-group-item toggle-hide'>
           <p>
             The number of regional platforms was extracted from several recent
-            presentations on the IOOS Communications and Presentations Landing
-            Page.
-            <p>
-              <a target="_blank" href="http://www.ioos.noaa.gov/communications/presentations/welcome.html">IOOS Communications and Presentations Landing Page</a>.
-            </p>
+            presentations on the
+            <a target="_blank" href="http://www.ioos.noaa.gov/communications/presentations/welcome.html">IOOS Communications and Presentations Landing Page</a>.
           </p>
         </div>
         <!-- -->
@@ -364,11 +361,8 @@
         <div id='national' class='list-group-item toggle-hide'>
           <p>
             The number of federal platforms was extracted from several recent
-            presentations on the IOOS Communications and Presentations Landing
-            Page.
-            <p>
-              <a target="_blank" href="http://www.ioos.noaa.gov/communications/presentations/welcome.html">IOOS Communications and Presentations Landing Page</a>.
-            </p>
+            presentations on the
+            <a target="_blank" href="http://www.ioos.noaa.gov/communications/presentations/welcome.html">IOOS Communications and Presentations Landing Page</a>.
           </p>
         </div>
         <!-- -->
