--- a/ioos_catalog/templates/landing.html
+++ b/ioos_catalog/templates/landing.html
@@ -64,9 +64,13 @@
           </a>
         </div>
     </div>
-
+  </div> <!-- row -->
+  <div class="row">
+    <div class="col-md-2 pull-right">
+        <a class="text-muted" href="{{url_for('static', filename='attributions.txt')}}">Photo Attributions</a>
+    </div>
   </div>
-   <!-- row -->
+
   <div class="row news">
     <div class="col-sm-12 col-md-6"> <!-- social media -->
       <h1> SOCIAL MEDIA </h1>
