--- a/ioos_catalog/templates/landing.html
+++ b/ioos_catalog/templates/landing.html
@@ -15,7 +15,7 @@
   <div class="row shrunk">
     <div class="col-sm-12 col-md-12 welcome">
   <h1>Welcome</h1>
-      <p>U.S. IOOS is a vital tool for tracking, predicting, managing, and adapting to changes in our ocean, coastal and Great Lakes environment. U.S. IOOS delivers the data and information needed, so that decision-makers can take action to improve safety, enhance the economy, and protect the environment. Explore the interactive features of the new IOOS Data Catalog.</p>
+      <p>The United States Integrated Ocean Observing System (U.S. IOOS) is a vital tool for tracking, predicting, managing, and adapting to changes in our ocean, coastal and Great Lakes environment. U.S. IOOS delivers the data and information needed, so that decision-makers can take action to improve safety, enhance the economy, and protect the environment. Explore the interactive features of the new IOOS Data Catalog.</p>
     </div> <!-- welcome -->
   </div> <!-- row -->
   <div id='packery-container' class="row">
