--- a/ioos_catalog/templates/landing.html
+++ b/ioos_catalog/templates/landing.html
@@ -99,7 +99,7 @@
         </div>
       </div> <!-- thumbnail -->
       <h1> CONTACT: </h1>
-      <a href="mailto:contact@ioos.org">contact@ioos.org</a>
+      <a href="mailto:ioos.catalog@noaa.gov">ioos.catalog@noaa.gov</a>
     </div> <!-- col -->
 
 </div>
