Changes link SCCOOS on featured maps

--- a/ioos_catalog/templates/featured_maps.html
+++ b/ioos_catalog/templates/featured_maps.html
@@ -159,11 +159,11 @@
           </div>
         </div> <!-- list-group-item -->
         <div class="list-group-item media">
-          <a target="_blank" class="pull-left" href="http://sccoos.org/interactive-map/">
+          <a target="_blank" class="pull-left" href="http://www.sccoos.org/data/observations/">
             <img class="media-object" src="{{url_for('static', filename='img/featured_maps/sccoos.png')}}" alt="SCCOOS">
           </a>
           <div class="media-body">
-            <a target="_blank" href="http://sccoos.org/interactive-map/">
+            <a target="_blank" href="http://www.sccoos.org/data/observations/">
               <h4 class="media-heading">SCCOOS Interactive Map</h4>
             </a>
             The SCCOOS Interactive Map has a listing of available products that
