--- a/ioos_catalog/static/css/welcome.css
+++ b/ioos_catalog/static/css/welcome.css
@@ -10,6 +10,11 @@
     font-size: 34px;
 }
 
+/* make links visible against blue background */
+.welcome a {
+  color: #999
+}
+
 .img-block {
     margin-top: 15px;
     margin-left: -30px;
