Updates the IOOS Emblem

--- a/ioos_catalog/static/css/ism-style.css
+++ b/ioos_catalog/static/css/ism-style.css
@@ -235,6 +235,7 @@ svg path.dataset.active {
 
 .navbar-custom .navbar-img-brand img {
   height: 47px;
+  padding-right: 20px;
 }
 
 .navbar-custom .navbar-brand {
