--- a/ioos_catalog/templates/landing.html
+++ b/ioos_catalog/templates/landing.html
@@ -21,7 +21,7 @@
   <div id='packery-container' class="row">
     <div id="gliders-ico" class="item item-smallest">
         <div class="overlay">
-          <a href="{{url_for('gliders')}}">
+          <a href="https://gliders.ioos.us/">
             Gliders
           </a>
         </div>
@@ -112,7 +112,7 @@ $(document).ready(function() {
     $('#gliders-ico')
       .backstretch("{{url_for('static', filename='img/landing/glider.png')}}")
       .click(function() {
-        window.location = "{{url_for('gliders')}}";
+        window.location = "https://gliders.ioos.us/";
       });
     $('#map-ico')
       .backstretch("{{url_for('static', filename='img/landing/earth.png')}}")
